--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -24,6 +24,11 @@
     <!-- Extension points defined by the plugin.
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-extension-points.html -->
     <extensions defaultExtensionNs="com.intellij">
-
+        <applicationConfigurable
+            instance="it.unisa.zammarrelli.digitaltwinforcybersecurity.settings.PluginSettingsConfigurable"
+            id="it.unisa.zammarrelli.digitaltwinforcybersecurity.settings.PluginSettingsConfigurable"
+            displayName="Digital Twin For CyberSecurity"
+        />
+        <applicationService serviceImplementation="it.unisa.zammarrelli.digitaltwinforcybersecurity.settings.PluginSettingsStateService"/>
     </extensions>
 </idea-plugin>
