--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -37,7 +37,7 @@
         <group id="toolbarPlugin"/>
         <action class="it.unisa.zammarrelli.digitaltwinforcybersecurity.actions.VulnerabilitiesAnalysisAction"
             id="AnalizzaVulnerabilità" text="Analizza Vulnerabilita" icon="AllIcons.Actions.Dump"
-                description="SDK action example">
+                description="Analizza Vulnerabilità del file corrente">
             <add-to-group group-id="toolbarPlugin"/>
         </action>
     </actions>
