Bug fix e miglioramenti

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -34,11 +34,11 @@
                     id="DigitalTwinForCyberSecurity" icon="AllIcons.Providers.ApacheDerby" anchor="bottom"/>
     </extensions>
     <actions>
-        <group id="toolbarPlugin"/>
-        <action class="it.unisa.zammarrelli.digitaltwinforcybersecurity.actions.VulnerabilitiesAnalysisAction"
-            id="AnalizzaVulnerabilità" text="Analizza Vulnerabilita" icon="AllIcons.Actions.Search"
-                description="Analizza Vulnerabilità del file corrente">
-            <add-to-group group-id="toolbarPlugin"/>
-        </action>
+        <group id="toolbarPlugin">
+            <action class="it.unisa.zammarrelli.digitaltwinforcybersecurity.actions.VulnerabilitiesAnalysisAction"
+                id="AnalizzaVulnerabilità" text="Analizza Vulnerabilita" icon="AllIcons.Actions.Search"
+                    description="Analizza Vulnerabilità del file corrente">
+            </action>
+        </group>
     </actions>
 </idea-plugin>
